Fix dark mode for greatwesterntrail and soixantedeuxsoleilsdete

--- a/src/css/games/greatwesterntrail.less
+++ b/src/css/games/greatwesterntrail.less
@@ -46,22 +46,8 @@ html[data-theme=dark] {
 		background-color: var(--light-50);
 	}
 
-	.fixed-player-board .me.white .player-board-and-tiles:not(.no-fixed),
-	.fixed-player-cards .me.white .player-cards:not(.no-fixed),
 	.shadow-white {
 		box-shadow: 0 0 10px 1px #999;
-	}
-
-	.fixed-player-cards .me .player-cards:not(.no-fixed),
-	.fixed-player-board .player-board-and-tiles:not(.no-fixed) {
-		background-color: var(--dark-back);
-	}
-
-	.fixed-player-cards .me .player-cards:not(.no-fixed) .player-cards-button,
-	.fixed-player-board .player-board-and-tiles:not(.no-fixed) .player-board-button {
-		background-color: var(--dark-20);
-		border: 1px solid var(--dark-40);
-		box-shadow: 0 2px 3px 1px var(--dark-40);
 	}
 
 	#gwt_deck_info {
@@ -80,8 +66,25 @@ html[data-theme=dark] {
 	#gwt_undo_button:hover {
 		border: 1px solid var(--light-70);
 	}
+}
 
-	.fixed-player-board.fixed-player-cards .me {
-		background-color: transparent;
-	}
+html[data-theme=dark].fixed-player-board .me.white .player-board-and-tiles:not(.no-fixed),
+html[data-theme=dark].fixed-player-cards .me.white .player-cards:not(.no-fixed) {
+	box-shadow: 0 0 10px 1px #999;
+}
+
+html[data-theme=dark].fixed-player-cards .me .player-cards:not(.no-fixed),
+html[data-theme=dark].fixed-player-board .player-board-and-tiles:not(.no-fixed) {
+	background-color: var(--dark-back);
+}
+
+html[data-theme=dark].fixed-player-cards .me .player-cards:not(.no-fixed) .player-cards-button,
+html[data-theme=dark].fixed-player-board .player-board-and-tiles:not(.no-fixed) .player-board-button {
+	background-color: var(--dark-20);
+	border: 1px solid var(--dark-40);
+	box-shadow: 0 2px 3px 1px var(--dark-40);
+}
+
+html[data-theme=dark].fixed-player-board.fixed-player-cards .me {
+	background-color: transparent;
 }
