--- a/src/css/games/soixantedeuxsoleilsdete.less
+++ b/src/css/games/soixantedeuxsoleilsdete.less
@@ -28,6 +28,41 @@ html[data-theme=dark] {
 		border-top-right-radius: 2rem;
 	}
 
+	.sde_btn-die {
+		background: var(--die-background) transparent no-repeat;
+		border: 0;
+	}
+
+	.notouch-device .sde_btn-die.die-1.bgabutton_blue:hover,
+	.sde_btn-die.die-1 {
+		background-position: -180px 0
+	}
+
+	.notouch-device .sde_btn-die.die-2.bgabutton_blue:hover,
+	.sde_btn-die.die-2 {
+		background-position: -144px 0
+	}
+
+	.notouch-device .sde_btn-die.die-3.bgabutton_blue:hover,
+	.sde_btn-die.die-3 {
+		background-position: -108px 0
+	}
+
+	.notouch-device .sde_btn-die.die-4.bgabutton_blue:hover,
+	.sde_btn-die.die-4 {
+		background-position: -72px 0
+	}
+
+	.notouch-device .sde_btn-die.die-5.bgabutton_blue:hover,
+	.sde_btn-die.die-5 {
+		background-position: -36px 0
+	}
+
+	.notouch-device .sde_btn-die.die-6.bgabutton_blue:hover,
+	.sde_btn-die.die-6 {
+		background-position: 0 0
+	}
+
 	.sde_sun-board .zone-tooltip,
 	.sde_sun-board .pearl[class*=id-] {
 		filter: var(--ext-bright);
